Corrigindo a tabela de mediana

--- a/Imoveis-Aluguel/imoveis_aluguel.ipynb
+++ b/Imoveis-Aluguel/imoveis_aluguel.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "3579f2d7",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "f381a06e",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "[32960 rows x 9 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,6 +374,118 @@
    "metadata": {},
    "source": [
     "# Pegando a mediana do valor do aluguel por bairro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c3972123",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Valor</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Bairro</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Abolição</th>\n",
+       "      <td>1200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alto da Boa Vista</th>\n",
+       "      <td>1850.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Anchieta</th>\n",
+       "      <td>775.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andaraí</th>\n",
+       "      <td>1400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Anil</th>\n",
+       "      <td>1600.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vila Valqueire</th>\n",
+       "      <td>1300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vila da Penha</th>\n",
+       "      <td>1100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vista Alegre</th>\n",
+       "      <td>1150.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zumbi</th>\n",
+       "      <td>2850.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Água Santa</th>\n",
+       "      <td>850.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>162 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Valor\n",
+       "Bairro                   \n",
+       "Abolição           1200.0\n",
+       "Alto da Boa Vista  1850.0\n",
+       "Anchieta            775.0\n",
+       "Andaraí            1400.0\n",
+       "Anil               1600.0\n",
+       "...                   ...\n",
+       "Vila Valqueire     1300.0\n",
+       "Vila da Penha      1100.0\n",
+       "Vista Alegre       1150.0\n",
+       "Zumbi              2850.0\n",
+       "Água Santa          850.0\n",
+       "\n",
+       "[162 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median_bairro = aluguel_df[['Bairro', 'Valor']].groupby('Bairro').median()\n",
+    "median_bairro"
    ]
   },
   {
